[package]
name = "omnip"
version = "0.4.18"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.16", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4.14"
chrono = "0.4.19"
anyhow = "1.0.44"
futures-util = "0.3.17"
pin-utils = "0.1.0"
num_cpus = "1.13.1"
url = "2.3"
regex = "1.5"
notify = "6.0"
rs-utilities = "0.4.2"
# rs-utilities = { path = "../rs-utilities" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
lazy_static = "1.4"
async-trait = "0.1"
byte-pool = { git = "https://github.com/neevek/byte-pool" }
# rstun = { path = "../rstun" }
rstun = { git = "https://github.com/neevek/rstun" }
hyper = { version = "0.14", features = ["full"]}
http = "0.2"
http-body = "0.4"
mime_guess = "2.0"

[dev-dependencies]
jni = "0.19"
android_logger = "0.13"

[target.aarch64-linux-android.dependencies]
jni = "0.19"
android_logger = "0.13"

[target.armv7-linux-androideabi.dependencies]
jni = "0.19"
android_logger = "0.13"


######### build shared lib for android ###########
# cargo build --target=aarch64-linux-android --release --lib

[profile.release]
opt-level = "z"
strip = true
lto ="fat" 
panic = "abort"
